[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Arena.gd" type="Script" id=2]
[ext_resource path="res://VarelaRound-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Score.gd" type="Script" id=4]
[ext_resource path="res://Camera2D.gd" type="Script" id=5]
[ext_resource path="res://Highscore.gd" type="Script" id=6]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_bloom = 0.15
glow_blend_mode = 0
glow_bicubic_upscale = true

[sub_resource type="DynamicFont" id=2]
size = 128
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[node name="Arena" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 180 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Enemy_spawn_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Difficulty" type="Timer" parent="."]
autostart = true

[node name="UI" type="Node2D" parent="."]
z_index = 20

[node name="Control" type="Control" parent="UI"]
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI/Control"]
margin_right = 1280.0
margin_bottom = 155.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highscore" type="Label" parent="UI/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -39.0
margin_right = 1280.0
margin_bottom = 39.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 320, 180 )
current = true
script = ExtResource( 5 )

[node name="Screen_shake_time" type="Timer" parent="Camera2D"]
wait_time = 1.5
one_shot = true
[connection signal="timeout" from="Enemy_spawn_timer" to="." method="_on_Enemy_spawn_timer_timeout"]
[connection signal="timeout" from="Difficulty" to="." method="_on_Difficulty_timeout"]
[connection signal="timeout" from="Camera2D/Screen_shake_time" to="Camera2D" method="_on_Screen_shake_time_timeout"]
